--- a/ClientApp/src/custom.css
+++ b/ClientApp/src/custom.css
@@ -16,3 +16,11 @@ code {
   background-color: #1b6ec2;
   border-color: #1861ac;
 }
+
+.trip-form {
+	margin: 10% 30% 10% 30%;
+}
+
+.form-group {
+	margin: 1% 0 1% 0;
+}
